# potoki-sorting

./: README.md  potoki-sorting.cabal
tests/: Main.hs
