name: potoki-sorting
version: 0.1
synopsis: 
description:
category: Sorting
homepage: https://github.com/metrix-ai/potoki-sorting
bug-reports: https://github.com/metrix-ai/potoki-sorting/issues
author: Oleg Shevchenko <shevchenko.cmc@gmail.com>
maintainer: Metrix.AI Tech Team <tech@metrix.ai>
copyright: (c) 2018, Metrix.AI
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
tested-with: GHC ==8.4.2, GHC ==8.6.*


source-repository head
  type: git
  location: git://github.com/metrix-ai/potoki-core.git

library
  hs-source-dirs: library
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Potoki.Sorting.Transform    
  other-modules:
    Potoki.Sorting.Produce
    Potoki.Sorting.Consume
    Potoki.Sorting.Consume.Transform
    Potoki.Sorting.Prelude
  build-depends:
    acquire >=0.2 && <0.3,
    attoparsec >=0.13 && <0.15,
    base >=4.9 && <5,
    bytestring ==0.10.*,
    directory >=1.3 && <2,
    foldl >=1.3 && <2,
    hashable >=1 && <2,
    profunctors >=5.2 && <6,
    ptr >=0.16.2 && <0.17,
    scanner >=0.3 && <0.4,
    stm >=2.4 && <2.6,
    text >=1 && <2,
    time >=1.5 && <2,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2 && <0.3,
    vector >=0.12.0.1 && <0.13,
    potoki-cereal >=0.3 && <0.3.2,
    potoki-core >=2.3 && <2.4,
    vector-algorithms >=0.7.0.4 && <0.7.1,
    cereal >=0.5 && <0.6

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, Strict, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  other-modules:
  build-depends:
    acquire >=0.2 && <0.3,
    attoparsec,
    foldl >=1.4 && <1.5,
    ilist >=0.3.1.0 && <0.4,
    potoki-core,
    potoki-sorting,
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    random >=1.1 && <2,
    rerebase >=1.1 && <2,
    tasty >=1.0.1 && <1.2,
    tasty-hunit >=0.10 && <0.11,
    tasty-quickcheck >=0.10 && <0.11,
    data-ordlist >=0.4.7.0 && <0.5
